--- a/trac/admin/templates/admin_perms.html
+++ b/trac/admin/templates/admin_perms.html
@@ -61,12 +61,12 @@
           <tr><th>Subject</th><th>Action</th></tr>
         </thead>
         <tbody>
-          <tr py:for="idx, (subject, permGroup) in enumerate( groupby(sorted(perms), key=lambda tmp: tmp[0]))"
+          <tr py:for="idx, (subject, perm_group) in enumerate( groupby(sorted(perms), key=lambda tmp: tmp[0]))"
               class="${idx % 2 and 'odd' or 'even'}">
             <td>$subject</td>
             <td>
-              <py:for each="(subject,action) in permGroup">
-                <div style="width:155px;float:left;">
+              <py:for each="(subject,action) in perm_group">
+                <div>
                   <input py:if="revoke_perm" type="checkbox" name="sel" value="$subject:$action" />
                   <label for="$subject:$action">$action</label>
                 </div>
