--- a/trac/admin/templates/admin_perms.html
+++ b/trac/admin/templates/admin_perms.html
@@ -12,6 +12,12 @@
   <body>
     <h2>Manage Permissions</h2>
 
+    <p class="help">
+      Note that <em>Subject</em> or <em>Group</em> names can't be all upper cased, <br />
+      as this is reserved for permission names.
+    </p>
+
+
     <py:if test="'PERMISSION_GRANT' in perm">
     <form id="addperm" class="addnew" method="post" action="">
       <fieldset>
