--- a/trac/templates/error.html
+++ b/trac/templates/error.html
@@ -6,7 +6,7 @@
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
   <head>
-    <title>${message or 'Error'}</title>
+    <title>${title or 'Error'}</title>
     <script py:if="frames" type="text/javascript">/*<![CDATA[*/
       $(document).ready(function() {
         $("#traceback a").click(function() {
