--- a/trac/versioncontrol/templates/changeset.html
+++ b/trac/versioncontrol/templates/changeset.html
@@ -175,7 +175,7 @@
           </dl>
         </div>
 
-        <xi:include href="diff_div.html" />
+        <xi:include href="diff_div.html" py:with="no_id = False" />
 
       </div>
     </div>
