--- a/trac/templates/diff_div.html
+++ b/trac/templates/diff_div.html
@@ -74,11 +74,11 @@
               <thead>
                 <tr>
                   <th colspan="2">
-                    <a title="$item.old.get('title')" href="$item.old.href#L$fromline"
+                    <a title="${item.old.get('title')}" href="${item.old.get('href')}#L$fromline"
                        py:strip="'href' not in item.old">$longcol $item.old.rev</a>
                   </th>
                   <th colspan="2">
-                    <a title="$item.new.get('title')" href="$item.new.href#L$toline"
+                    <a title="${item.new.get('title')}" href="${item.new.get('href')}#L$toline"
                        py:strip="'href' not in item.new">$longcol $item.new.rev</a>
                   </th>
                 </tr>
@@ -89,12 +89,12 @@
               <thead>
                 <tr>
                   <th title="$longcol $item.old.rev">
-                    <a title="$item.old.get('title')" href="$item.old.href#L$fromline"
+                    <a title="${item.old.get('title')}" href="${item.old.get('href')}#L$fromline"
                        py:strip="'href' not in item.old">
                       $shortcol$item.old.shortrev</a>
                   </th>
                   <th title="$longcol $item.new.rev">
-                    <a title="$item.new.get('title')" href="$item.new.href#L$toline"
+                    <a title="${item.new.get('title')}" href="${item.new.get('href')}#L$toline"
                        py:strip="'href' not in item.new">
                       $shortcol$item.new.shortrev</a>
                   </th>
